app/assets/stylesheets/layouts/event_page.scss
/*==========  Mobile First Method  ==========*/
.single-event {
  background-color: #fff;
  .events_row {
    display: flex;
    flex-direction: column;
    flex-grow: grow;
  }
  .side-menu {
    display: flex;
    flex-direction: column;
    padding: 3rem 2rem;
    width: auto;

    h2 {
      font-size: 20px;
      line-height: 25px;
      color: #4C9AD2;
    }
  }
  .content {
    display: flex;
    flex-direction: column;
    padding: 2rem 0;
    width: 100%;
    height: 100%;

    h3 {
      font-size: 18px;
      line-height: 20px;
      color: #CC1E57;
    }
  }

  .info {
    margin: 0.8em 0;
  }

  .grey-line {
    width: 90%;
    margin: 0 auto;
    border: 1px solid #F4F4F4;
  }

  iframe {
    padding-top: 1em;
  }

  figure {
    display: flex;
    flex-direction: column;
    align-content: center;
    align-items: center;
    padding: 1em 2em;
    border: 1px solid #dde4e6;
    transition: all 0.4s ease;
    cursor: pointer;

    &:hover {
      background-color: #fff;
    }

    img {
      display: inline-block;
      width: auto !important;
      height: auto !important;
      max-height: 125px;
    }
  }
}

  .sponsors {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: flex-start;
    align-items: flex-start;
  }

  .clickable_tile {
    display: flex;
    padding: 1em;
    transition: all 0.4s ease;
    cursor: pointer;
    width: 200px;
    box-sizing: border-box;
    height: 125px;
    margin: 2px;
    background-color: white;
    border: 1px solid #F4F4F4;
    border-radius: 5px;
    align-content: center;
    justify-content: center;

    &:hover {
      opacity: 0.7;
      border: 1px solid #4C9AD2;
    }

    img {
      display: inline-block;
      margin: 0 auto;
      height: 90%;
      width: 90%;
    }
  }

/* Small Devices, Tablets */
@media only screen and (min-width : 768px) {
  .single-event {
    > section > section {
      display: flex;

      article {
        width: 50%;
      }

      > {
        aside {
          width: 50%;
          padding-left: 2em;
        }
      }
    }
  }
}

/* desktops */
@media only screen and (min-width : 992px) {
  .single-event {
    background-color: #fff;
    .events_row {
      display: flex;
      flex-direction: row;
      flex-grow: none;
    }
    .side-menu {
      display: flex;
      flex-direction: column;
      padding: 4rem;
      width: 20%;

      h2 {
        font-size: 25px;
        line-height: 30px;
        color: #4C9AD2;
      }
    }
    .content {
      display: flex;
      flex-direction: column;
      padding: 4rem;
      width: 80%;

      h3 {
        font-size: 20px;
        line-height: 25px;
        color: #CC1E57;
      }
    }

    .info {
      margin: 1em 0;
      padding: 20px;
    }

    .grey-line {
      width: 90%;
      margin: 0 auto;
      border: 1px solid #F4F4F4;
    }
  }
}

